changed position of the youtube video

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
     fr: {
       title: "L'apprentissage des langues est plus simple avec <span>ALDB</span>",
       desc: `Anki Lang Deck Builder est une application 100% gratuite qui utilise les voix neuronales réalistes de Edge TTS.\nElle génère automatiquement vos decks .apkg, directement importables dans Anki, avec enregistrements vocaux.\nUn énorme gain de temps, conçu pour l’apprentissage des langues.`,
-      downloadExe: "⬇ Télécharger (.exe)",
-      downloadZip: "⬇ Télécharger (.zip)",
+      downloadExe: "⬇ Télécharger (win .exe)",
+      downloadZip: "⬇ Télécharger (win .zip)",
       languages: "Langues supportées",
       voices: "Voix",
       features: [
@@ -302,8 +302,8 @@
     en: {
       title: "Remembering languages is easier with <span>ALDB</span>",
       desc: `Anki Lang Deck Builder is a 100% free app that uses realistic neural voices from Edge TTS.\nIt automatically generates .apkg decks, ready to import into Anki, with audio recordings.\nA huge time saver, designed for language learning.`,
-      downloadExe: "⬇ Download (.exe)",
-      downloadZip: "⬇ Download (.zip)",
+      downloadExe: "⬇ Download (win .exe)",
+      downloadZip: "⬇ Download (win .zip)",
       languages: "Supported languages",
       voices: "Voices",
       features: [
