--- a/index.html
+++ b/index.html
@@ -251,7 +251,15 @@
 
   <!-- Vidéo -->
   <div class="video">
-    <iframe src="https://www.youtube.com/embed/YmU07BXxfhM" title="Présentation ALDB"></iframe>
+    <iframe 
+      width="100%" 
+      height="500" 
+      src="https://www.youtube.com/embed/YmU07BXxfhM" 
+      title="Présentation ALDB"
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+    </iframe>
   </div>
 
   <!-- Screenshot -->
