added img folder and removing useless medias

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       </div>
     </div>
     <div class="hero-logo">
-      <img src="ALDB_LOGO.svg" alt="Logo ALDB">
+      <img src="img/ALDB_LOGO.svg" alt="Logo ALDB">
     </div>
   </section>
 
