Easily create your Anki decks with realistic voices and multilingual support

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property="og:title" content="Anki Lang Deck Builder" />
-  <meta property="og:description" content="Créez facilement vos decks Anki avec voix réalistes et support multilingue." />
+  <meta property="og:description" content="Easily create your Anki decks with realistic voices and multilingual support" />
   <meta property="og:image" content="https://smartdevsource.github.io/anki-lang-deck-builder-site/img/ALDB_LOGO.png" />
   <meta property="og:url" content="https://ton-site.com/" />
   <meta property="og:type" content="website" />
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Anki Lang Deck Builder" />
   <meta name="twitter:description"
-    content="Créez facilement vos decks Anki avec voix réalistes et support multilingue." />
+    content="Easily create your Anki decks with realistic voices and multilingual support" />
   <meta name="twitter:image" content="https://smartdevsource.github.io/anki-lang-deck-builder-site/img/ALDB_LOGO.png" />
 
   <title>Anki Lang Deck Builder</title>
